--- a/packages/ui/src/components/DesignSystem/Color-Styles.stories.mdx
+++ b/packages/ui/src/components/DesignSystem/Color-Styles.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, ColorPalette, ColorItem } from "@storybook/addon-docs";
 
-<Meta title="Emoldino Design System/Color & Styles" />
+<Meta title="Design System/Color & Styles"/>
 
 # Color & Styles
 
